--- a/config/database.yml
+++ b/config/database.yml
@@ -80,7 +80,7 @@ test:
 #
 production:
   <<: *default
-  database: <%= ENV['DATABASE_URL'] %>
-  # database: students_dashboard_back_end_production
-  # username: students_dashboard_back_end
-  # password: <%= ENV['STUDENTS_DASHBOARD_BACK_END_DATABASE_PASSWORD'] %>
+  # database: <%= ENV['DATABASE_URL'] %>
+  database: students_dashboard_back_end_production
+  username: students_dashboard_back_end
+  password: <%= ENV['STUDENTS_DASHBOARD_BACK_END_DATABASE_PASSWORD'] %>
