--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,9 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  database = <%= ENV['DATABASE_URL'] %>
+  # <<: *default
+
   # database: students_dashboard_back_end_production
   # username: students_dashboard_back_end
   # password: <%= ENV['STUDENTS_DASHBOARD_BACK_END_DATABASE_PASSWORD'] %>
