--- a/test/fixtures/units.yml
+++ b/test/fixtures/units.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  unit_name: MyString
+  name: MyString
   description: MyText
 
 two:
-  unit_name: MyString
+  name: MyString
   description: MyText
