--- a/config/database.yml
+++ b/config/database.yml
@@ -20,15 +20,15 @@ default: &default
     # For details on connection pooling, see Rails configuration guide
     # https://guides.rubyonrails.org/configuring.html#database-pooling
     pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-    #user: postgres
-    #password: password
-    #port: <%=ENV['POSTGRES_PORT'] %>
+    user: postgres
+    password: password
+    port: <%=ENV['POSTGRES_PORT'] %>
 
 development:
   <<: *default
   database: students_dashboard_back_end_SINAN
-  #user: postgres
-  #password: password
+  user: postgres
+  password: password
   
 
     # The specified database role being used to connect to postgres.
